# CarplayAccessoryVoiceActivation

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md
cmake/: CarplayVoiceActivationConfig.cmake.in  build_android_arm64.sh
native/include/: carplay_voice_activation.h
native/src/: carplay_voice_activation.c
